Constructed basic testing pages for Image/Video/Audio elements in HTML5.

--- a/index.html
+++ b/index.html
@@ -70,12 +70,18 @@
 
       <aside>
         <ol type = "I">
-          <li>Calender Event </li>
+          <li> Calender Event
             <blockquote>Something regarding the calender event 1!</blockquote>
-          <li>Calender Event </li>
+          </li>
+
+          <li>Calender Event
             <blockquote>Something regarding the calender event 2!</blockquote>
-          <li>Calender Event </li>
+          </li>
+
+          <li>Calender Event
             <blockquote>Something regarding the calender event 3!</blockquote>
+          </li>
+
         </ol>
       </aside>
 
