--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale="1.0>
     <title>Testing Videos in HTML5</title>
   </head>
 
