Corrected Image/Video file names. (Removed spaces).

--- a/images.html
+++ b/images.html
@@ -10,11 +10,11 @@
   <body>
     <h1>First test with images!</h1>
     <h2>Height and Width Adjustments</h2>
-    <img src="images/Profile image.jpg" alt="Profile Picture"
+    <img src="images/Profile_image.jpg" alt="Profile Picture"
       title="Profile Picture Large" height="280" width="225">
-    <img src="images/Profile image.jpg" alt="Profile Picture"
+    <img src="images/Profile_image.jpg" alt="Profile Picture"
       title="Profile Picture Medium" height="180" width="135">
-    <img src="images/Profile image.jpg" alt="Profile Picture"
+    <img src="images/Profile_image.jpg" alt="Profile Picture"
       title="Profile Picture Small" height="100" width="75">
 
     <h2>Responsive Images Test</h2>
