--- a/videos.html
+++ b/videos.html
@@ -15,11 +15,11 @@
 
     <figure>
       <figcaption><b>Cage the Elephant Trouble Audio</b></figcaption>
-      <audio controls src="media/CtE Trouble Audio.mp3">Your browser does not support the <code>audio</code> element.</audio>
+      <audio controls src="media/CtE_Trouble_Audio.mp3">Your browser does not support the <code>audio</code> element.</audio>
     </figure>
 
     <h2>Cage the Elephant Trouble Video (Mirror)</h2>
-    <video width="560" controls src="media/CtE Trouble Video.mp4">Your browser does not support the <code>video</code> element.</video>
+    <video width="560" controls src="media/CtE_Trouble_Video.mp4">Your browser does not support the <code>video</code> element.</video>
 
   </body>
 
