Renamed main three files for webpage index, video and about pages.

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
       <header>
         <nav>
         <ul>
-          <li><a href="home_testpage.html">Home</a></li>
-          <li><a href="about_testpage.html">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li>Albums</li>
-          <li><a href="videos_testpage.html">Videos</a></li>
+          <li><a href="videos.html">Videos</a></li>
           <li>Other</li>
         </ul>
         </nav>
