Created a style.css file in styles folder. Tested CSS on pages.

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cage the Elephant - About</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
     <body>
 
@@ -21,10 +22,12 @@
       </header>
 
       <hr>
+      <header>
         <h2>About Cage the Elephant</h2>
         <img src="images/CTE_NielKrug_Press2.jpg" alt="About Header Image"
           title="About Page Header Image" height="720" width="1050">
         <p>Cage the Elephant Press Shot by Neil Krug</p>
+      </header>
         <hr>
         <p><b>About the band</b></p>
         <table>
