--- a/videos.html
+++ b/videos.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cage the Elephant - Videos</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
     <body>
 
@@ -19,11 +20,12 @@
         </nav>
 
       </header>
-
-        <h1>Latest Releases From Cage the Elephant!</h1>
+      <header>
+        <h2>Latest Releases From Cage the Elephant!</h2>
         <img src="images/CageTheElephant_Videos_Header.png" alt="Videos Header Image"
           title="Videos Header Image" height="720" width="1050">
         <p>Cage the Elephant Press Shot by Neil Krug</p>
+      </header>
         <hr>
         <h2>Cage the Elephant - Trouble Official Music Video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lA-gGl6qihQ" frameborder="0"
