Tested box models and added additional CSS styling to texts/content.

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
       <hr>
       <header>
-        <h2>About Cage the Elephant</h2>
+        <h2 id="about">About Cage the Elephant</h2>
         <img src="images/CTE_NielKrug_Press2.jpg" alt="About Header Image"
           title="About Page Header Image" height="720" width="1050">
         <p>Cage the Elephant Press Shot by Neil Krug</p>
@@ -88,7 +88,43 @@
               <td><b>- - - - - - - - - - - -</b></td>
 
         </table>
-        <p>Still working on bio of Cage the Elephant! Check back later for full in-depth history of the band! </p>
+        <p class="aboutsum">Still working on bio of Cage the Elephant! Check back later for full in-depth history of the band! </p>
+        <br>
+        <p class="aboutsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Diam quis enim lobortis scelerisque fermentum dui. Metus aliquam
+          eleifend mi in nulla posuere sollicitudin aliquam. Vehicula ipsum a arcu cursus vitae congue. Diam in arcu cursus euismod quis viverra.
+          Sed velit dignissim sodales ut eu sem integer. Integer eget aliquet nibh praesent tristique magna sit amet purus. Convallis a cras semper
+          auctor neque. Nisi porta lorem mollis aliquam ut. Tortor consequat id porta nibh venenatis cras. Morbi leo urna molestie at elementum eu
+          facilisis. Lacus sed viverra tellus in. Cras pulvinar mattis nunc sed. Leo vel orci porta non pulvinar neque laoreet suspendisse interdum.
+          <br>
+          <br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Pharetra magna ac placerat vestibulum lectus mauris. Fringilla est ullamcorper eget nulla. Dolor morbi non arcu risus quis varius
+          quam. Mattis vulputate enim nulla aliquet. Quam lacus suspendisse faucibus interdum posuere. Ornare massa eget egestas purus viverra
+          accumsan in. In fermentum posuere urna nec tincidunt praesent semper. Non curabitur gravida arcu ac tortor dignissim convallis.
+          Est sit amet facilisis magna etiam tempor orci. Bibendum neque egestas congue quisque egestas. Fusce id velit ut tortor pretium
+          viverra. Et tortor at risus viverra adipiscing at. Aliquet lectus proin nibh nisl condimentum. Fringilla phasellus faucibus
+          scelerisque eleifend donec pretium. Vitae congue eu consequat ac felis donec et odio. Neque vitae tempus quam pellentesque nec
+          nam aliquam.
+          <br>
+          <br>
+          Egestas diam in arcu cursus. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Nisl rhoncus mattis rhoncus urna neque
+          viverra justo. Velit scelerisque in dictum non consectetur a erat nam. Ultrices tincidunt arcu non sodales neque. Gravida cum sociis
+          natoque penatibus et magnis dis parturient montes. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sit amet
+          luctus venenatis lectus magna. Enim lobortis scelerisque fermentum dui faucibus in ornare quam. Facilisis magna etiam tempor orci eu
+          lobortis elementum. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Vestibulum rhoncus est pellentesque elit
+          ullamcorper dignissim cras.
+          <br>
+          Purus non enim praesent elementum facilisis leo vel fringilla est. Dui nunc mattis enim ut tellus elementum sagittis vitae et. Accumsan
+          <br>
+          sit amet nulla facilisi morbi. Tristique nulla aliquet enim tortor at auctor urna nunc. Vulputate enim nulla aliquet porttitor lacus
+          luctus accumsan. Maecenas ultricies mi eget mauris pharetra. Risus sed vulputate odio ut enim blandit volutpat maecenas. Penatibus et
+          magnis dis parturient. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum. Sollicitudin nibh sit amet commodo nulla facilisi
+          nullam. Eget arcu dictum varius duis at consectetur lorem donec massa. Quis ipsum suspendisse ultrices gravida dictum fusce ut. Risus
+          in hendrerit gravida rutrum quisque non tellus orci ac. Viverra maecenas accumsan lacus vel facilisis volutpat est. Sollicitudin tempor
+          id eu nisl nunc mi ipsum faucibus vitae. Sed enim ut sem viverra aliquet. Nibh sed pulvinar proin gravida hendrerit. Libero nunc
+          consequat interdum varius sit amet mattis vulputate.</p>
+
         <img src="images/CageTheElephant_Coachella2014.jpg" alt="About Header Image"
           title="About Page Header Image" height="720" width="1050">
       <hr>
