--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class ="Band News">
           <header>
           <hr>
-            <h2>Keep Up With Cage the Elephant Right Here!</h2>
+            <h2 id="keepup">Keep Up With Cage the Elephant Right Here!</h2>
             <img src="images/CTE_NielKrug_Press.jpg" alt="Header Concert Image"
               title="Header Image" height="720" width="1050">
             <p>Cage the Elephant Press Shot by Neil Krug</p>
@@ -36,13 +36,13 @@
           </header>
           <article>
             <p><b><a href="https://www.cagetheelephant.com/tour/">2020 UK/European Tour Announced!</a></b></p>
-            <p>Cage the Elephant has announced their first UK/EU tour since 2017. They are set to play at the O2 Victoria Warehouse
+            <p>Cage the Elephant has announced their first UK/EU tour since 2017. They are set to play at the <span>O2 Victoria Warehouse</span>
               in Manchester on Wednesday 02/19 to kick it off. This is in the wake of their recently cancelled 2019 tour as a result of
               guitarist Nick Bockrath suffering from a break in his knee.</p>
           </article>
           <article>
             <p><b><a href="https://www.forecastlefest.com/">CTE Set to Play at FORECASTLE Music Festival</a></b></p>
-            <p>The band is currently set to play at the FORECASTLE music festival in Louisville, Kentucky. The festival runs from July 17 to
+            <p>The band is currently set to play at the <span>FORECASTLE</span> music festival in Louisville, Kentucky. The festival runs from July 17 to
             July 19 at the Waterfront Park. The festival's FAQs can be found <a href="https://www.forecastlefest.com/faq/">HERE.</a></p>
             <img src="images/CageTheElephant_LineUp.png" alt="Forecastle LineUp"
             title="FORECASTLE Line Up" height="720" width="400">
