Furthered CSS implementations including new header designs and font size

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li>Albums</li>
+          <li><a href="albums.html">Albums</a></li>
           <li><a href="videos.html">Videos</a></li>
           <li>Other</li>
         </ul>
