--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li>Albums</li>
+          <li><a href="albums.html">Albums</a></li>
           <li><a href="videos.html">Videos</a></li>
           <li>Other</li>
         </ul>
@@ -30,7 +30,7 @@
             <img src="images/CTE_NielKrug_Press.jpg" alt="Header Concert Image"
               title="Header Image" height="720" width="1050">
             <p>Cage the Elephant Press Shot by Neil Krug</p>
-            <p><b>The latest on CTE</b></p>
+            <h1><b>THE LATEST ON CTE</b></h1>
             <blockquote>Keep up with all things Cage the Elephant including new releases, tour dates, festival appearances and more! </blockquote>
           <hr>
           </header>
