--- a/videos.html
+++ b/videos.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li>Albums</li>
+          <li><a href="albums.html">Albums</a></li>
           <li><a href="videos.html">Videos</a></li>
           <li>Other</li>
         </ul>
@@ -21,7 +21,7 @@
 
       </header>
       <header>
-        <h2>Latest Releases From Cage the Elephant!</h2>
+        <h2 id="keepup">Latest Releases From Cage the Elephant!</h2>
         <img src="images/CageTheElephant_Videos_Header.png" alt="Videos Header Image"
           title="Videos Header Image" height="720" width="1050">
         <p>Cage the Elephant Press Shot by Neil Krug</p>
