Furthered CSS GRID implementation. Mainly on Videos & About pages.

--- a/about.html
+++ b/about.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
     <body>
+      <section id="MainHeader">
+        <a href="index.html">
+        <img src="images/Main_logo.png" alt="Main Header Image"
+          title="Header Image" height="200">
+        </a>
+        <img src="images/Header_BG.png" alt="Main Header Image"
+          title="Header Image" height="200" width="1920">
+      </section>
 
       <header>
         <nav>
@@ -30,6 +38,7 @@
       </header>
         <hr>
         <p><b>About the band</b></p>
+        <section id="abouttable">
         <table>
           <thead>
             <tr>
@@ -88,8 +97,13 @@
               <td><b>- - - - - - - - - - - -</b></td>
 
         </table>
+      </section>
+        <section id="aboutupper">
         <p class="aboutsum">Still working on bio of Cage the Elephant! Check back later for full in-depth history of the band! </p>
         <br>
+        <div id="two">
+        <img src="images/CageTheElephant_Coachella2014.jpg" alt="About Header Image"
+            title="About Page Header Image" height="600" width="750">
         <p class="aboutsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Diam quis enim lobortis scelerisque fermentum dui. Metus aliquam
           eleifend mi in nulla posuere sollicitudin aliquam. Vehicula ipsum a arcu cursus vitae congue. Diam in arcu cursus euismod quis viverra.
@@ -124,9 +138,12 @@
           in hendrerit gravida rutrum quisque non tellus orci ac. Viverra maecenas accumsan lacus vel facilisis volutpat est. Sollicitudin tempor
           id eu nisl nunc mi ipsum faucibus vitae. Sed enim ut sem viverra aliquet. Nibh sed pulvinar proin gravida hendrerit. Libero nunc
           consequat interdum varius sit amet mattis vulputate.</p>
+        </div>
 
-        <img src="images/CageTheElephant_Coachella2014.jpg" alt="About Header Image"
-          title="About Page Header Image" height="720" width="1050">
+
+
+      </section>
+
       <hr>
 
       <footer>
