--- a/albums.html
+++ b/albums.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
     <body>
+      <section id="MainHeader">
+        <a href="index.html">
+        <img src="images/Main_logo.png" alt="Main Header Image"
+          title="Header Image" height="200">
+        </a>
+        <img src="images/Header_BG.png" alt="Main Header Image"
+          title="Header Image" height="200" width="1920">
+      </section>
 
       <header>
         <nav>
