added JSON-LD to index.html using "MusicGroup" type.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Cage the Elephant - Homepage</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicGroup",
+    "legalName": "Cage The Elephant",
+    "foundingLocation": "Bowling Green. Kentucky, U.S.",
+    "genre":
+      [
+      "Indie Rock",
+      "Alternative Rock",
+      "Garage Rock"
+      ],
+    "member":
+      [
+      "Matt Shultz",
+      "Brad Shultz",
+      "Nick Bockrath",
+      "Matthan Minster",
+      "Daniel Tichenor",
+      "Jared Champion"
+      ],
+    "event": "Forecastle Music Festival",
+    "location": "Louisville, Kentucky",
+    "url": "https://www.cagetheelephant.com/home/",
+
+  }
+  </script>
     <body>
       <section id="MainHeader">
         <a href="index.html">
