--- a/videos.html
+++ b/videos.html
@@ -10,7 +10,7 @@
       <section id="MainHeader">
         <a href="index.html">
         <img src="images/Main_logo.png" alt="Main Header Image"
-          title="Header Image" height="200">
+          title="Header Image" height="200" width="1600">
         </a>
         <img src="images/Header_BG.png" alt="Main Header Image"
           title="Header Image" height="200" width="1920">
