Completed CSS implementation and added further JSON-LD types/values.

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
       <section id="MainHeader">
         <a href="index.html">
         <img src="images/Main_logo.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1600">
+          title="Header Image" height="200">
         </a>
         <img src="images/Header_BG.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1920">
+          title="Header Image" height="200" width="1600">
       </section>
 
       <header>
@@ -32,10 +32,9 @@
       <hr>
       <header>
         <h2 id="about">About Cage the Elephant</h2>
-        <img src="images/CTE_NielKrug_Press2.jpg" alt="About Header Image"
-          title="About Page Header Image" height="720" width="1050">
-        <p>Cage the Elephant Press Shot by Neil Krug</p>
       </header>
+      <img src="images/about_header.png" alt="Main Header Image"
+        title="Header Image" height="150" width="1920">
         <hr>
         <p><b>About the band</b></p>
         <section id="abouttable">
@@ -99,45 +98,53 @@
         </table>
       </section>
         <section id="aboutupper">
-        <p class="aboutsum">Still working on bio of Cage the Elephant! Check back later for full in-depth history of the band! </p>
+        <p class="aboutsum">All content for the Cage the Elephant 'About' page was aquired through the band's Wikipedia page which can be found:
+         <a href="https://en.wikipedia.org/wiki/Cage_the_Elephant">HERE.</a></p>
         <br>
         <div id="two">
-        <img src="images/CageTheElephant_Coachella2014.jpg" alt="About Header Image"
-            title="About Page Header Image" height="600" width="750">
-        <p class="aboutsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Amet tellus cras adipiscing enim eu turpis egestas pretium aenean. Diam quis enim lobortis scelerisque fermentum dui. Metus aliquam
-          eleifend mi in nulla posuere sollicitudin aliquam. Vehicula ipsum a arcu cursus vitae congue. Diam in arcu cursus euismod quis viverra.
-          Sed velit dignissim sodales ut eu sem integer. Integer eget aliquet nibh praesent tristique magna sit amet purus. Convallis a cras semper
-          auctor neque. Nisi porta lorem mollis aliquam ut. Tortor consequat id porta nibh venenatis cras. Morbi leo urna molestie at elementum eu
-          facilisis. Lacus sed viverra tellus in. Cras pulvinar mattis nunc sed. Leo vel orci porta non pulvinar neque laoreet suspendisse interdum.
+        <img src="images/about_body_image.jpg" alt="About Header Image"
+            title="About Page Header Image"  height="700" width="700">
+        <p class="aboutsum">Cage the Elephant is an American rock band from Bowling Green, Kentucky that formed in 2006. They relocated to
+          London, England in 2008 before their first album was released. The band currently consists of lead vocalist Matt Shultz, rhythm guitarist
+          Brad Shultz, lead guitarist Nick Bockrath, guitarist and keyboardist Matthan Minster, bassist Daniel Tichenor, and drummer Jared Champion.
+          Lincoln Parish served as the band's lead guitarist from their formation in 2006  until December 2013, when he left on good terms to
+          pursue a career in producing. The band's first album, Cage the Elephant, was released in 2008 to much success, spawning several successful
+          radio singles and gained the band a large following in both the United States and the United Kingdom. It was influenced by classic rock,
+          funk, and blues music.
+          The band's second album, Thank You, Happy Birthday, was heavily influenced by punk rock as well as bands such as Pixies and Nirvana.
+          The band's third album, Melophobia, was the band's concerted effort to find its own distinct musical identity. Cage the Elephant's
+          fourth album, Tell Me I'm Pretty, produced by Dan Auerbach, was released on December 18, 2015. The band released a live album,
+          Unpeeled, on July 28, 2017. Their fifth studio album, Social Cues, was released on April 19, 2019. They won the Grammy Award for
+          Best Rock Album twice, in 2017 for Tell Me I'm Pretty and in 2020 for Social Cues.
           <br>
           <br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Pharetra magna ac placerat vestibulum lectus mauris. Fringilla est ullamcorper eget nulla. Dolor morbi non arcu risus quis varius
-          quam. Mattis vulputate enim nulla aliquet. Quam lacus suspendisse faucibus interdum posuere. Ornare massa eget egestas purus viverra
-          accumsan in. In fermentum posuere urna nec tincidunt praesent semper. Non curabitur gravida arcu ac tortor dignissim convallis.
-          Est sit amet facilisis magna etiam tempor orci. Bibendum neque egestas congue quisque egestas. Fusce id velit ut tortor pretium
-          viverra. Et tortor at risus viverra adipiscing at. Aliquet lectus proin nibh nisl condimentum. Fringilla phasellus faucibus
-          scelerisque eleifend donec pretium. Vitae congue eu consequat ac felis donec et odio. Neque vitae tempus quam pellentesque nec
-          nam aliquam.
+          Before he was a band member for Cage the Elephant, Matt Shultz worked in construction as a plumber. In an interview with the "Rock It Out!"
+          blog for Consequence of Sound, he said he felt like if he did not quit that job, he would be stuck there for the rest of his life. He left
+          to work at a sandwich bar with Brad Shultz, who had previously worked in telemarketing. Daniel Tichenor held a job at Lowe's and
+          Jared Champion worked in a pet store. Nick Bockrath is part of the band Nicos Gun and previously played bass with Morning Teleportation.
+          Cage got to know him through their friendship with that band. Matthan Minster formed a band called YOURS in 2010.
+          Members of Cage the Elephant had previously been involved in the band Perfect Confusion when they were in high school and released a
+          self-titled LP in 2005. Matt Shultz was also in an experimental punk band in middle school called Left Nostril.
+          The band's name, according to lead singer Matt Shultz, came from an incident in 2006 when a mentally disturbed man approached the band
+          after a show. He hugged Shultz and kept repeating the sentence "You have to cage the elephant" over and over again.
           <br>
           <br>
-          Egestas diam in arcu cursus. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Nisl rhoncus mattis rhoncus urna neque
-          viverra justo. Velit scelerisque in dictum non consectetur a erat nam. Ultrices tincidunt arcu non sodales neque. Gravida cum sociis
-          natoque penatibus et magnis dis parturient montes. Magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sit amet
-          luctus venenatis lectus magna. Enim lobortis scelerisque fermentum dui faucibus in ornare quam. Facilisis magna etiam tempor orci eu
-          lobortis elementum. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Vestibulum rhoncus est pellentesque elit
-          ullamcorper dignissim cras.
-          <br>
-          Purus non enim praesent elementum facilisis leo vel fringilla est. Dui nunc mattis enim ut tellus elementum sagittis vitae et. Accumsan
-          <br>
-          sit amet nulla facilisi morbi. Tristique nulla aliquet enim tortor at auctor urna nunc. Vulputate enim nulla aliquet porttitor lacus
-          luctus accumsan. Maecenas ultricies mi eget mauris pharetra. Risus sed vulputate odio ut enim blandit volutpat maecenas. Penatibus et
-          magnis dis parturient. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum. Sollicitudin nibh sit amet commodo nulla facilisi
-          nullam. Eget arcu dictum varius duis at consectetur lorem donec massa. Quis ipsum suspendisse ultrices gravida dictum fusce ut. Risus
-          in hendrerit gravida rutrum quisque non tellus orci ac. Viverra maecenas accumsan lacus vel facilisis volutpat est. Sollicitudin tempor
-          id eu nisl nunc mi ipsum faucibus vitae. Sed enim ut sem viverra aliquet. Nibh sed pulvinar proin gravida hendrerit. Libero nunc
-          consequat interdum varius sit amet mattis vulputate.</p>
+
+          The band signed with Relentless Records after showcasing at the 2007 South by Southwest music festival. Their first tour was as a support
+          act for Queens of the Stone Age in Canada. They then moved to London, England, to the Leyton area on the outskirts of the city. At the
+          time, Lincoln Parish was only 16 years old, so in order to be able to move, his parents had to sign over parental guardianship to the band.
+           In 2008, they appeared on the British show Later... with Jools Holland with Coldplay, Sia, Glen Campbell, John Mellencamp, and
+           Amy LaVere (all of whom served as audience to the band). They released their eponymous debut album, Cage the Elephant, on June 23, 2008
+           in the United Kingdom and April 21, 2009 in the United States, Japan, Australia, and Canada, to mostly favorable reviews. Their single
+           "Ain't No Rest for the Wicked" reached number 32 on the UK Singles Chart and was featured in the Gearbox Software video game Borderlands,
+           as well as in the 2010 movie The Bounty Hunter. It was also featured as ITunes' free single of the week for the week of April 12, 2009.
+          Cage the Elephant appeared as a support act on tour with The Pigeon Detectives in early 2008, and for Silversun Pickups and Manchester
+          Orchestra in 2009. They appeared on Everybody Loves Lil' Chris in October 2008. The group made a national TV appearance on the Late Show
+          with David Letterman, performing "Ain't No Rest for the Wicked" in July 2009. In August 2009, Cage the Elephant played for the first
+          time at Lollapalooza in Chicago, as well as San Francisco's Outside Lands Music and Arts Festival on August 30, 2009. Prior to their
+          return to Lollapalooza, the band also performed twice at Bonnaroo, once in June 2007 and in 2009. They released the single "Back Against
+          the Wall" which was later included in a Wii game, called We Cheer, We Cheer 2.
+
         </div>
 
 
