--- a/albums.html
+++ b/albums.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cage the Elephant - Videos</title>
+    <title>Cage the Elephant - Albums</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
     <body>
       <section id="MainHeader">
         <a href="index.html">
         <img src="images/Main_logo.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1600">
+          title="Header Image" height="200">
         </a>
         <img src="images/Header_BG.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1920">
+          title="Header Image" height="200" width="1600">
       </section>
 
       <header>
@@ -32,5 +32,118 @@
       <header>
         <h2 id="keepup">Cage the Elephant Albums</h2>
       </header>
+      <img src="images/albums_header.png" alt="Main Header Image"
+        title="Header Image" height="150" width="1920">
+
+      <section id="albums">
+      <div>
+      <h3>| Cage the Elephant (June 23, 2008) |</h3>
+      <img src="images/CTE_album_CageTheElephant.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Cage-Elephant-Vinyl/dp/B002OLV3DG/ref=sr_1_2?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-2">
+      HERE</a></h4>
+      </div>
+      <div>
+      <h3>| Thank You, Happy Birthday (January 11, 2011) |</h3>
+      <img src="images/CTE_album_ThankYouHappyBirthday.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Thank-Happy-Birthday-Cage-Elephant/dp/B004EKP5NO/ref=sr_1_6?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-6">
+      HERE</a></h4>
+      </div>
+      <div>
+      <h3>| Melophobia (October 3, 2013) |</h3>
+      <img src="images/CTE_album_Melophobia.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Melophobia-Cage-Elephant/dp/B00EPD3BSG/ref=sr_1_1?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-1">
+      HERE</a></h4>
+      </div>
+      <div>
+      <h3>| Tell Me I'm Pretty (December 18, 2015) |</h3>
+      <img src="images/CTE_album_TellMeImPretty.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Tell-Me-Pretty-Cage-Elephant/dp/B0162XR6SM/ref=sr_1_3?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-3">
+      HERE</a></h4>
+      </div>
+      <div>
+      <h3>| Unpeeled (July 28, 2017) |</h3>
+      <img src="images/CTE_album_Unpeeled.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Unpeeled-Cage-Elephant/dp/B06XYJ8YCY/ref=sr_1_4?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-4">
+      HERE</a></h4>
+      </div>
+      <div>
+      <h3>| Social Cues (April 19, 2019) |</h3>
+      <img src="images/CTE_album_SocialCues.jpg" alt="Album Image"
+        title="Album Image" height="400" width="400">
+
+      <h4>Buy the Album <a href="https://www.amazon.com/Social-Cues-Cage-Elephant/dp/B07N9JTFHW/ref=sr_1_5?crid=25EL2XXF145MA&dchild=1&keywords=cage+the+elephant+vinyl&qid=1588359890&sprefix=cage+the+e%2Caps%2C160&sr=8-5">
+      HERE</a></h4>
+      </div>
+
+
+    </section>
+    <section id="albumtable">
+    <table>
+      <thead>
+        <tr>
+          <th colspan="1"></th>
+          <th colspan="1">Release Date and Number of Songs</th>
+          <th colspan="1"></th>
+        </tr>
+        <tr>
+          <td><b>Album</b></td>
+          <td><b>Release Date</b></td>
+          <td><b># of Songs</b></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Cage the Elephant</td>
+          <td>June 23, 2008</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>Thank You, Happy Birthday</td>
+          <td>January 11, 2011</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>Melophobia</td>
+          <td>October 3, 2013</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Tell Me I'm Pretty</td>
+          <td>December 18, 2015</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Unpeeled</td>
+          <td>July 28, 2017</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>Social Cues</td>
+          <td>April 19, 2019</td>
+          <td>13</td>
+        </tr>
+
+      </tbody>
+      <tfoot>
+        <tr>
+          <td><b>6 Albums</b></td>
+          <td>- - - - - - - - - - - -</td>
+          <td><b>80 Songs</b></td>
+
+
+
+
+    </table>
+  </section>
 
   </html>
