--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       ],
     "event": "Forecastle Music Festival",
     "location": "Louisville, Kentucky",
+    "image": "https://assets.website-files.com/5e9686ff3186916848a0b598/5e96887aca19177b3d9a12a6_f20_admat_finalpng-93a37b92-p-1080.png",
     "url": "https://www.cagetheelephant.com/home/",
-
+    "album": "Social Cues",
+    "byArtist": "Cage the Elephant"
   }
   </script>
     <body>
@@ -62,13 +64,19 @@
           <header>
           <hr>
             <h2 id="keepup">Keep Up With Cage the Elephant Right Here!</h2>
-            <img src="images/CTE_NielKrug_Press.jpg" alt="Header Concert Image"
-              title="Header Image" height="720" width="1050">
-            <p>Cage the Elephant Press Shot by Neil Krug</p>
+          </header>
+          <img src="images/home_header.png" alt="Main Header Image"
+            title="Header Image" height="600" width="1500">
             <h1><b>THE LATEST ON CTE</b></h1>
             <blockquote>Keep up with all things Cage the Elephant including new releases, tour dates, festival appearances and more! </blockquote>
           <hr>
-          </header>
+
+          <article>
+              <p><b><a href="https://www.forecastlefest.com/">Forecastle Music Festival 2020 Cancelled!</a></b></p>
+              <p>The Forecastle Music Festival meant to run from July 17-19th 2020 in Louisville Kentucky and feature Cage the Elephant has now
+                officially been cancelled due to growing COVID-19 fears. Tickets are reportedly being automatically refunded and event organziers
+                are assuring event-goers that Forecastle will return in 2021.</p>
+          </article>
           <article>
             <p><b><a href="https://www.cagetheelephant.com/tour/">2020 UK/European Tour Announced!</a></b></p>
             <p>Cage the Elephant has announced their first UK/EU tour since 2017. They are set to play at the <span>O2 Victoria Warehouse</span>
@@ -82,6 +90,11 @@
             <img src="images/CageTheElephant_LineUp.png" alt="Forecastle LineUp"
             title="FORECASTLE Line Up" height="720" width="400">
           </article>
+          <article>
+              <p><b><a href="https://www.cagetheelephant.com/music/social-cues/">New Album Social Cues Out Now! (4/19)</a></b></p>
+              <p>The new studio album by Cage the Elephant, titled <span>Social Cues</span>, has been officially released. You can buy now from major retailers
+              or listen on Spotify.</p>
+          </article>
         </section>
 
 
@@ -89,6 +102,7 @@
 
     <aside>
       <h3>Upcoming Tour Dates</h3>
+      <h4>EVENT/TOUR DATES MAY BE CANCELLED OR MOVED DUE TO COVID-19 PANDEMIC!</h4>
       <ol>
         <li> SANTIAGO, CHILE (LOLLAPALOOZA CHILE)
           <blockquote>March 27 - <a href="https://www.lollapaloozacl.com/">TICKETS</a></blockquote>
@@ -101,6 +115,43 @@
         <li>ASUNCION, PARAGUAY (ASUNCIONICO FESTIVAL)
           <blockquote>March 31 - <a href="https://www.lollapaloozaar.com/">TICKETS</a></blockquote>
         </li>
+        <li> GULF SHORES, AL (HANGOUT MUSIC FESTIVAL)
+          <blockquote>May 15 - <a href="https://www.hangoutmusicfest.com/">TICKETS</a></blockquote>
+        </li>
+        <li> HARRISBURG, PA (HARRISBURG UNVERSITY AT RIVERFRONT PARK)
+          <blockquote>June 18 - <a href="https://www.ticketmaster.com/event/0200583FD7A197E8">TICKETS</a></blockquote>
+        </li>
+        <li> LONDON, ENGLAND (FINSBURY PARK)
+          <blockquote>June 28 - <a href="https://www.ticketmaster.co.uk/event/37005834024BC194">TICKETS</a></blockquote>
+        </li>
+        <li> BRIGHTON, UK (CONCORDE 2)
+          <blockquote>June 29 - <a href="https://www.ticketmaster.co.uk/event/1F005862F1A1F434">TICKETS</a></blockquote>
+        </li>
+        <li> EWIJK, NETHERLANDS (DOWN THE RABBIT HOLE)
+          <blockquote>July 03 - <a href="https://downtherabbithole.nl/tickets">TICKETS</a></blockquote>
+        </li>
+        <li> BELFORT, FRANCE (EUROCKEENNES FESTIVAL)
+          <blockquote>July 04 - <a href="https://www.eurockeennes.fr/">TICKETS</a></blockquote>
+        </li>
+        <li> ARRAS, FRANCE (MAINE SQUARE FESTIVAL)
+          <blockquote>July 05 - <a href="https://www.mainsquarefestival.fr/fr/tickets">TICKETS</a></blockquote>
+        </li>
+        <li> BARCELONA, SPAIN (RAZZMATAZZ)
+          <blockquote>July 08 - <a href="https://www.ticketmaster.es/event/cage-the-elephant-entradas/23405?brand=es_livenation">TICKETS</a></blockquote>
+        </li>
+        <li> MADRID. SPAIN (MAD COOL FESTIVAL)
+          <blockquote>July 09 - <a href="https://madcoolfestival.es/en/tickets.php">TICKETS</a></blockquote>
+        </li>
+        <li> LISBON, PORTUGAL (NOS ALIVE)
+          <blockquote>July 10 - <a href="https://nosalive.com/bilhetes/">TICKETS</a></blockquote>
+        </li>
+        <li> ASBURY PARK, NJ (SEA HEAR NOW)
+          <blockquote>September 19 - <a href="https://www.seahearnowfestival.com/tickets">TICKETS</a></blockquote>
+        </li>
+        <li> SAN FRANCISCO, CA (BREAD & ROSES' SPRING BENEFIT CONCERT)
+          <blockquote>January 22 - <a href="https://www.breadandroses.org/">TICKETS</a></blockquote>
+        </li>
+
 
       </ol>
     </aside>
