--- a/videos.html
+++ b/videos.html
@@ -10,10 +10,10 @@
       <section id="MainHeader">
         <a href="index.html">
         <img src="images/Main_logo.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1600">
+          title="Header Image" height="200">
         </a>
         <img src="images/Header_BG.png" alt="Main Header Image"
-          title="Header Image" height="200" width="1920">
+          title="Header Image" height="200" width="1600">
       </section>
 
       <header>
@@ -30,10 +30,9 @@
       </header>
       <header>
         <h2 id="keepup">Latest Releases From Cage the Elephant!</h2>
-        <img src="images/CageTheElephant_Videos_Header.png" alt="Videos Header Image"
-          title="Videos Header Image" height="720" width="1050">
-        <p>Cage the Elephant Press Shot by Neil Krug</p>
       </header>
+      <img src="images/videos_header.png" alt="Main Header Image"
+        title="Header Image" height="150" width="1920">
         <hr>
         <section id="videos">
         <div>
